testsuite/tests/partial-sigs/should_fail/Defaulting1MROff.hs
{-# LANGUAGE PartialTypeSignatures #-}
{-# LANGUAGE NoMonomorphismRestriction #-}
module Defaulting1MROff where

alpha :: _
alpha = 3
